# random-number-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_DOCKER.md  RandomNumberGenerator.py  codecov.yml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  random_server.py  test_random_number_generator.py  test_random_server.py
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker.yml  release.yml
src/: RandomNumberGenerator.py  random_server.py
tests/: test_random_number_generator.py  test_random_server.py
